CTR-176:  Vastly improved Zombie tests for template handling and verified that the new `equals` helper works as expected on the client side.

--- a/tests/views/pages/index.handlebars
+++ b/tests/views/pages/index.handlebars
@@ -1,6 +1,7 @@
-<h2>Page</h2>
+<div>
+  <h2>Page</h2>
 
-<p>This is content coming from the page.</p>
+  <p>This is content coming from the page.</p>
 
-{{>partial}}
-
+  {{>partial}}
+</div>
