GPII-1175:  Wired in function to rebuild the DOM when parts of the container are replaced with template content.  Also split current test harness into "success" and "failure" cases.

--- a/tests/views/partials/form-success.handlebars
+++ b/tests/views/partials/form-success.handlebars
@@ -1,3 +1,5 @@
-This was a triumph.  Let's celebrate with some moist, delicious data.
+<div class="viewport">
+  This was a triumph.  Let's celebrate with some moist, delicious data.
 
-{{jsonify .}}
+  {{jsonify .}}
+</div>
