--- a/tests/views/partials/form-error.handlebars
+++ b/tests/views/partials/form-error.handlebars
@@ -1,4 +1,4 @@
-<div class="alert-box alert">
+<div class="alert-box alert viewport">
     Something went wrong.  Allow me to elaborate:
 
     {{jsonify .}}
