GPII-1175:  Rearranged tests and expanded to test `templateAware` component independently of `formTemplateControl` component.  Refined implementations based on problems discovered while testing.  Updated Zombie dependency to avoid bug when AJAX request encounters an error.

--- a/tests/views/partials/form-error.handlebars
+++ b/tests/views/partials/form-error.handlebars
@@ -1,4 +1,4 @@
-<div class="alert-box alert viewport">
+<div class="alert-box alert readyForFailure">
     Something went wrong.  Allow me to elaborate:
 
     {{jsonify .}}
