--- a/tests/views/partials/form-success.handlebars
+++ b/tests/views/partials/form-success.handlebars
@@ -1,4 +1,4 @@
-<div class="viewport">
+<div class="readyForSuccess">
   This was a triumph.  Let's celebrate with some moist, delicious data.
 
   {{jsonify .}}
