GPII-1175:  Abstracted out a multi-template handler and update the form grade to use that to cleanly separate out refresh cycles.

--- a/tests/views/partials/common-error.handlebars
+++ b/tests/views/partials/common-error.handlebars
@@ -1,4 +1,4 @@
-<div class="alert-box alert readyForFailure">
+<div class="alert-box alert">
     Something went wrong.  Allow me to elaborate:
 
     {{jsonify .}}
