--- a/tests/views/partials/form-ambiguous-error.handlebars
+++ b/tests/views/partials/form-ambiguous-error.handlebars
@@ -1,5 +1,5 @@
-<div class="alert-box alert readyForAmbiguity">
+<div class="alert-box alert">
     Things seemed to go well, but it was all an illusion:
 
-    {{jsonify .}}
+    <div class="json">{{jsonify .}}</div>
 </div>
