--- a/tests/views/partials/form-failure-initial.handlebars
+++ b/tests/views/partials/form-failure-initial.handlebars
@@ -1,5 +1,5 @@
-<div class="readyForFailure">
-  <form>
-      <input type="submit" class="submit" value="{{buttonName}}"/>
-  </form>
-</div>
+<div class="success"></div>
+<div class="error"></div>
+<form>
+    <input type="submit" class="submit" value="{{buttonName}}"/>
+</form>
