--- a/tests/views/partials/form-success.handlebars
+++ b/tests/views/partials/form-success.handlebars
@@ -1,7 +1,7 @@
-<div class="readyForSuccess">
-  This was a triumph.  Let's celebrate with some moist, delicious data.
+<div class="alert-box success">
+    This was a triumph.  Let's celebrate with some moist, delicious data.
 
   <hr/>
-  
+
   <div class="json">{{jsonify .}}</div>
 </div>
