GPII-1180:  Attempted to resolve circular dependency in `multiTemplateAware`.

--- a/tests/views/partials/form-nested-initial.handlebars
+++ b/tests/views/partials/form-nested-initial.handlebars
@@ -1,7 +1,7 @@
-<div class="success"></div>
-<div class="error"></div>
-<form>
-    <input type="submit" class="submit" value="{{buttonName}}"/>
+<div class="outer-success"></div>
+<div class="outer-error"></div>
+<form class="outer-form">
+    <input type="submit" class="outer-submit" value="{{buttonName}}"/>
 </form>
 
-<div class="form-nested-nested"></div>
+<div class="form-nested-nested">This should not be visible</div>
