--- a/tests/views/partials/form-nested-nested.handlebars
+++ b/tests/views/partials/form-nested-nested.handlebars
@@ -1,5 +1,5 @@
-<div class="success"></div>
-<div class="error"></div>
-<form>
-    <input type="submit" class="submit" value="{{buttonName}}"/>
+<div class="inner-success"></div>
+<div class="inner-error"></div>
+<form class="inner-form">
+    <input type="submit" class="inner-submit" value="{{buttonName}}"/>
 </form>
