GPII-1225: Extracted common check for required options on startup to a new grade and added to grades that previously had their own implementation.

--- a/tests/views/partials/common-includes.handlebars
+++ b/tests/views/partials/common-includes.handlebars
@@ -22,13 +22,13 @@
 <script type="text/javascript" src="/bc/pagedown/Markdown.Converter.js"></script>
 <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
 
-
 <!-- Bring in the components from this package -->
 <script type="text/javascript" src="/src/js/common/helper.js"></script>
 <script type="text/javascript" src="/src/js/common/equals.js"></script>
 <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
 <script type="text/javascript" src="/src/js/common/md-common.js"></script>
 
+<script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
 <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
 <script type="text/javascript" src="/src/js/client/binder.js"></script>
 <script type="text/javascript" src="/src/js/client/md-client.js"></script>
