GPII-1225: Fixed data handling so that request data can be exposed to the renderer, and so that the initBlock helper can in turn use renderer context data as part of the generated component's model.

--- a/tests/views/layouts/initblock.handlebars
+++ b/tests/views/layouts/initblock.handlebars
@@ -3,6 +3,8 @@
       <title>Init Block Test Page...</title>
       {{>common-includes}}
 
+      <div class="initBlock-viewport"></div>
+
       <script type="text/javascript" src="/content/js/tests-initBlock.js"></script>
 
   </head>
