GPII-1494:  Updated renderer tests to use `gpii-test-browser`.

--- a/tests/templates/primary/pages/replace.handlebars
+++ b/tests/templates/primary/pages/replace.handlebars
@@ -1,4 +1,4 @@
-<div class="viewport-replaceWith">
+<div class="viewport-replaceWith replaced">
     <h1>Content from the template:</h1>
     <div>
       {{{body}}}
