--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -15,6 +15,9 @@
 <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformation.js"></script>
 <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
 
+<!-- gpii-binder dependency -->
+<script type="text/javascript" src="/modules/gpii-binder/src/js/binder.js"></script>
+
 <!-- Bring in Handlebars dependency -->
 <script type="text/javascript" src="/bc/handlebars/handlebars.js"></script>
 
@@ -30,7 +33,6 @@
 
 <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
 <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
-<script type="text/javascript" src="/src/js/client/binder.js"></script>
 <script type="text/javascript" src="/src/js/client/md-client.js"></script>
 <script type="text/javascript" src="/src/js/client/renderer.js"></script>
 <script type="text/javascript" src="/src/js/client/templateManager.js"></script>
