--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -19,11 +19,11 @@
 <script type="text/javascript" src="/modules/gpii-binder/src/js/binder.js"></script>
 
 <!-- Bring in Handlebars dependency -->
-<script type="text/javascript" src="/bc/handlebars/handlebars.js"></script>
+<script type="text/javascript" src="/modules/handlebars/dist/handlebars.js"></script>
 
 <!-- Bring in Pagedown dependencies -->
-<script type="text/javascript" src="/bc/pagedown/Markdown.Converter.js"></script>
-<script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
+<script type="text/javascript" src="/modules/pagedown/Markdown.Converter.js"></script>
+<script type="text/javascript" src="/modules/pagedown/Markdown.Sanitizer.js"></script>
 
 <!-- Bring in the components from this package -->
 <script type="text/javascript" src="/src/js/common/helper.js"></script>
