NOJIRA: Updated additional classes to match `foundation-sites` version 6 instead of legacy `foundation` package.

--- a/tests/templates/primary/partials/form-success.handlebars
+++ b/tests/templates/primary/partials/form-success.handlebars
@@ -1,4 +1,4 @@
-<div class="alert-box success">
+<div class="callout success">
     This was a triumph.  Let's celebrate with some moist, delicious data.
 
   <hr/>
