--- a/tests/templates/primary/partials/common-error.handlebars
+++ b/tests/templates/primary/partials/common-error.handlebars
@@ -1,5 +1,5 @@
 {{#if message}}
-<div class="alert-box alert">
+<div class="callout alert">
     Something went wrong.  Allow me to elaborate:
 
     {{jsonify .}}
