GPII-1810:  Updated all dependencies.  FLUID-5963: Updated to standard ESLint configuration (and updated dependencies).

--- a/tests/templates/primary/partials/partial.handlebars
+++ b/tests/templates/primary/partials/partial.handlebars
@@ -38,5 +38,6 @@
     <tr>
         <td>Testing Unequal Variable and String</td>
         <td class="unequal">{{#equals "nonsense" json.qux}}true{{else}}false{{/equals}}</td>
-    </tr>    </tbody>
+    </tr>
+    </tbody>
 </table>
