GPII-2180: Updated `templateFormControl` to use more specific selectors.

--- a/tests/templates/primary/partials/form-contained-initial.handlebars
+++ b/tests/templates/primary/partials/form-contained-initial.handlebars
@@ -1,5 +1,5 @@
-<div class="success"></div>
-<div class="error"></div>
+<div class="templateFormControl-success"></div>
+<div class="templateFormControl-error"></div>
 
 A place for everything, and everything in its place.
 <form></form>
