--- a/tests/templates/primary/partials/form-success-initial.handlebars
+++ b/tests/templates/primary/partials/form-success-initial.handlebars
@@ -1,5 +1,5 @@
-<div class="success"></div>
-<div class="error"></div>
+<div class="templateFormControl-success"></div>
+<div class="templateFormControl-error"></div>
 <form>
     <input type="submit" class="submit" value="{{buttonName}}"/>
 </form>
