--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -21,9 +21,8 @@
 <!-- Bring in Handlebars dependency -->
 <script type="text/javascript" src="/modules/handlebars/dist/handlebars.js"></script>
 
-<!-- Bring in Pagedown dependencies -->
-<script type="text/javascript" src="/modules/pagedown/Markdown.Converter.js"></script>
-<script type="text/javascript" src="/modules/pagedown/Markdown.Sanitizer.js"></script>
+<!-- Bring in markdown-it dependencies -->
+<script type="text/javascript" src="/modules/markdown-it/dist/markdown-it.js"></script>
 
 <!-- Bring in the components from this package -->
 <script type="text/javascript" src="/src/js/common/helper.js"></script>
