GPII-2767: Updated to remove the need to explicitly pass the root context, and to restore support for passing a sub-context.

--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -29,6 +29,7 @@
 <script type="text/javascript" src="/src/js/common/equals.js"></script>
 <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
 <script type="text/javascript" src="/src/js/common/md-common.js"></script>
+<script type="text/javascript" src="/src/js/common/messageHelper.js"></script>
 
 <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
 <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
