GPII-3085: Consolidated renderer guts into a single common grade and fixed client-side renderer. GPII-2444: Modelised message bundles. NOJIRA: Modelised templates.

--- a/tests/templates/secondary/pages/overridden.handlebars
+++ b/tests/templates/secondary/pages/overridden.handlebars
@@ -3,5 +3,5 @@
 
   <p>This is content coming from a page served up from the secondary template directory.</p>
 
-  {{>override-partial}}
+  {{>overridden-partial}}
 </div>
