GPII-3121: Refactored based on PR feedback.

--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -12,6 +12,7 @@
 
 <!-- Bring in the components from this package -->
 <script type="text/javascript" src="/src/js/common/lib/i18n.js"></script>
+<script type="text/javascript" src="/src/js/common/lib/delete-and-add.js"></script>
 <script type="text/javascript" src="/src/js/common/helper.js"></script>
 <script type="text/javascript" src="/src/js/common/equals.js"></script>
 <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
