--- a/tests/templates/primary/pages/initblock.handlebars
+++ b/tests/templates/primary/pages/initblock.handlebars
@@ -1,1 +1,14 @@
+<h1 id="qunit-header">"initBlock" Helper Tests</h1>
+<h2 id="qunit-banner"></h2>
+<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests">
+</ol>
+
+<hr/>
+<div class="initBlock-viewport">This should have been updated.</div>
+
 {{{initBlock "gpii.tests.initBlock"}}}
+
+<!-- The actual jqUnit tests -->
+<script type="text/javascript" src="/tests/browser-fixtures/js/tests-initBlock.js"></script>
