GPII-4100: Refactored most browser tests to use Fluid IoC Test Framework to improve stability.

--- a/tests/templates/primary/layouts/initblock.handlebars
+++ b/tests/templates/primary/layouts/initblock.handlebars
@@ -12,8 +12,8 @@
       <script src="/testem.js"></script>
       <script type="text/javascript" src="/coverage/client/coverageSender.js"></script>
 
-      <!-- The component referenced in our initBlock -->
-      <script type="text/javascript" src="/tests/browser-fixtures/js/tests-initBlock-component.js"></script>
+      <!-- The test component, which will run tests once it's created and has a chance to render. -->
+      <script type="text/javascript" src="/tests/browser-fixtures/js/tests-initBlock.js"></script>
   </head>
   <body>
     {{{body}}}
