FLUID-6524: Migrate to fluid-project organisation and update dependencies.

--- a/tests/templates/primary/pages/initblock.handlebars
+++ b/tests/templates/primary/pages/initblock.handlebars
@@ -8,4 +8,4 @@
 <hr/>
 <div class="initBlock-viewport">This should have been updated.</div>
 
-{{{initBlock "gpii.tests.initBlock"}}}
+{{{initBlock "fluid.tests.initBlock"}}}
