--- a/tests/templates/primary/partials/common-includes.handlebars
+++ b/tests/templates/primary/partials/common-includes.handlebars
@@ -1,8 +1,8 @@
 <!-- Bring in jQuery and fluid dependencies -->
 <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
 
-<!-- gpii-binder dependency -->
-<script type="text/javascript" src="/node_modules/gpii-binder/src/js/binder.js"></script>
+<!-- fluid-binder dependency -->
+<script type="text/javascript" src="/node_modules/fluid-binder/src/js/binder.js"></script>
 
 <!-- Bring in Handlebars dependency -->
 <script type="text/javascript" src="/node_modules/handlebars/dist/handlebars.js"></script>
